@@ -1,5 +1,12 @@
 2009-07-22  Priit Laes  <plaes@plaes.org>
 
+	Bug 572841 – FLAC files are not imported
+
+	* src/Metadata.cs: Make metadata parsing more robust.
+	Based on patches by Benjamin Bagland and Jorn Baayen.
+
+2009-07-22  Priit Laes  <plaes@plaes.org>
+
 	Bug 573172 – [PATCH] Get rid of deprecated APIs
 
 	* src/About.cs, src/CoverImage.cs: Fix more deprecation warnings.
